# agent-bench

./: .gitignore  README.md  action.yml  agent-bench.example.yaml  agent-bench.yaml  pyproject.toml  trend-history.json
.github/workflows/: ci.yml  weekly-benchmark.yml
benchmark-results/: airbnb.com.json  amazon.com.json  amazon.json  api.github.com.json  api.json  bankofamerica.com.json  bbc.com.json  chase.com.json  cnn.com.json  craigslist.org.json  discord.com.json  discord.json  docs.github.com.json  docs.json  doordash.com.json  dropbox.com.json  ebay.com.json  etsy.com.json  figma.com.json  figma.json  github.com.json  github.json  httpbin.json  httpbin.org.json  hubspot.com.json  instagram.com.json  irs.gov.json  leaderboard.html  linear.app.json  linear.json  linkedin.com.json  medium.com.json  medium.json  news.json  news.ycombinator.com.json  notion.json  notion.so.json  nytimes.com.json  open.spotify.com.json  pinterest.com.json  (+32 more)
benchmark-results/2026-03-21/: anthropic.com.json  aws.amazon.com.json  azure.microsoft.com.json  cloudflare.com.json  datadog.com.json  docker.com.json  firebase.google.com.json  github.com.json  openai.com.json  postman.com.json  sendgrid.com.json  stripe.com.json  summary.json  supabase.com.json  twilio.com.json  vercel.com.json
benchmark-results/2026-03-23/: airbnb.com.json  amazon.com.json  bbc.com.json  cnn.com.json  discord.com.json  docs.github.com.json  ebay.com.json  etsy.com.json  figma.com.json  github.com.json  httpbin.org.json  hubspot.com.json  linkedin.com.json  medium.com.json  nytimes.com.json  reddit.com.json  shopify.com.json  slack.com.json  stackoverflow.com.json  stripe.com.json  summary.json  target.com.json  twitter.com.json  uber.com.json  usa.gov.json  walmart.com.json  weather.gov.json  wikipedia.org.json  youtube.com.json  zoom.us.json
benchmark-results/2026-03-24/: airbnb.com.json  amazon.com.json  bbc.com.json  cnn.com.json  discord.com.json  docs.github.com.json  ebay.com.json  etsy.com.json  figma.com.json  github.com.json  httpbin.org.json  hubspot.com.json  linkedin.com.json  medium.com.json  nytimes.com.json  reddit.com.json  shopify.com.json  slack.com.json  stackoverflow.com.json  stripe.com.json  summary.json  target.com.json  twitter.com.json  uber.com.json  usa.gov.json  walmart.com.json  weather.gov.json  wikipedia.org.json  youtube.com.json  zoom.us.json
benchmark-results/2026-03-30/: airbnb.com.json  amazon.com.json  bbc.com.json  cnn.com.json  discord.com.json  docs.github.com.json  ebay.com.json  etsy.com.json  figma.com.json  github.com.json  httpbin.org.json  hubspot.com.json  linkedin.com.json  medium.com.json  nytimes.com.json  reddit.com.json  shopify.com.json  slack.com.json  stackoverflow.com.json  stripe.com.json  summary.json  target.com.json  twitter.com.json  uber.com.json  usa.gov.json  walmart.com.json  weather.gov.json  wikipedia.org.json  youtube.com.json  zoom.us.json
benchmark-results/2026-04-01/: airbnb.com.json  amazon.com.json  bbc.com.json  cnn.com.json  (+26 more)
examples/: agent-bench-ci.yml  custom_agent.py  github-actions-ci.yml  score-tracking.yml
research/: README.md  agents_txt_survey.csv  agents_txt_survey.json  fetch_agents_txt.py  fetch_llms_txt.py  fetch_robots_txt.py  llms_txt_survey.csv  llms_txt_survey.json  robots_txt_survey.csv  robots_txt_survey.json
tasks/: example.yaml
tests/: test_a11y.py  test_a2a.py  test_adapters.py  test_agents_txt.py  test_api.py  test_auth.py  test_ci.py  test_classifier.py  test_cli.py  test_cli_models.py  test_compare.py  test_config.py  test_cost.py  test_docs.py  test_errors.py  test_html_report.py  test_integration.py  test_leaderboard.py  test_performance.py  test_plugins.py  test_registry.py  test_results.py  test_run_wiring.py  test_schema.py  test_scorer.py  test_structure.py  test_trend.py  test_trend_chart.py  test_x402.py
(+172 files in other folders)
