[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bench"
version = "0.1.0"
description = "Benchmark suite for evaluating how AI-agent-native a website is"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Isaac Chang", email = "chang.isaac97@gmail.com" },
    { name = "Sylphie", email = "sylphie@lightlayer.dev" },
]
keywords = ["ai", "agents", "benchmark", "web", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
browser-use = [
    "browser-use>=0.1",
    "langchain-anthropic>=0.3",
    "playwright>=1.40",
]
playwright = [
    "playwright>=1.40",
    "httpx>=0.27",
]
all = [
    "agent-bench[browser-use,playwright]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/LightLayer-dev/agent-bench"
Repository = "https://github.com/LightLayer-dev/agent-bench"
Issues = "https://github.com/LightLayer-dev/agent-bench/issues"
Documentation = "https://github.com/LightLayer-dev/agent-bench#readme"

[project.scripts]
agent-bench = "agent_bench.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bench"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit the network (deselect with -m 'not integration')",
]
